[package]
name = "docker-registry-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
lazy_static = "1.4.0"
futures = "0.3.21"

[dependencies.time]
version = "0.3.11"
features = ["parsing"]

[dependencies.clap]
version = "3.2.12"
features = ["derive"]

[dependencies.tokio]
version = "1.20.0"
features = ["rt", "macros", "rt-multi-thread"]

[dependencies.serde]
version = "1.0.139"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]

[profile.release]
debug = true
